[package]
name = "redstr-server"
version = "0.1.3"
edition = "2021"
authors = ["Arvid Berndtsson <dev@arvid.tech>"]
description = "HTTP API server for redstr string transformations"
license = "MIT"
repository = "https://github.com/arvid-berndtsson/redstr-server"
homepage = "https://github.com/arvid-berndtsson/redstr-server"
keywords = ["red-team", "security", "http-server", "api", "redstr"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[[bin]]
name = "redstr-server"
path = "src/main.rs"

[dependencies]
redstr = "^0.2.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

